--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "allure:generate": "allure generate allure-results --clean",
     "allure:open": "allure open allure-report",
     "allure:serve": "allure serve allure-results",
+    "allureFile": "npx allure generate allure-results --clean -o allure-report",
     "report": "npx playwright show-report",
     "install:browsers": "npx playwright install"
   },
