--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,8 +26,10 @@ jobs:
       - name: Запускаем тесты
         run: npm t
         env:
-         LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
-         LOGIN_PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
+         TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
+         TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+         BASE_URL: 'https://realworld.qa.guru'
+
         
       - name: Запускаем генерацию allure в одном файле
         run: npm run allureFile
